--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <div class="status-bar">
       <div class="status-bar_column">
-        <i class="fa-solid fa-gear"></i>
+        <button class="btn"><i class="fa-solid fa-gear"></i></button>
       </div>
       <div class="status-bar_column">
-        <i class="fa-solid fa-window-minimize"></i>
+        <button class="btn"><i class="fa-solid fa-window-minimize"></i></button>
       </div>
       <div class="status-bar_column">
-        <i class="fa-solid fa-xmark"></i>
+        <button class="btn"><i class="fa-solid fa-xmark"></i></button>
       </div>
     </div>
     <div class="logo">
@@ -31,7 +31,7 @@
       <input type="submit" value="로그인" />
       <label for="autoLogin"
         ><input type="checkbox" id="autoLogin" checked />자동로그인
-        <i class="fa-solid fa-circle-question"></i
+        <button class="btn"><i class="fa-solid fa-circle-question"></i></button
       ></label>
     </form>
     <div class="userServices">
