친구목록 생성

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/component/login.css" />
+    <link rel="stylesheet" href="css/component/status-bar.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,18 +11,14 @@
     <div class="status-bar">
       <div class="status-bar_column">
         <button class="btn"><i class="fa-solid fa-gear"></i></button>
-      </div>
-      <div class="status-bar_column">
         <button class="btn"><i class="fa-solid fa-window-minimize"></i></button>
-      </div>
-      <div class="status-bar_column">
         <button class="btn"><i class="fa-solid fa-xmark"></i></button>
       </div>
     </div>
     <div class="logo">
       <img src="img/Logo.jpg" />
     </div>
-    <form action="chatList.html" method="get" id="loginForm">
+    <form action="frendList.html" method="get" id="loginForm">
       <input
         required
         id="userID"
