친구목록 수정

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="logo">
       <img src="img/Logo.jpg" />
     </div>
-    <form action="frendList.html" method="get" id="loginForm">
+    <form action="friendList.html" method="get" id="loginForm">
       <input
         required
         id="userID"
