--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <body>
     <div class="status-bar">
       <div class="status-bar_column">
-        <button class="btn"><i class="fa-solid fa-gear"></i></button>
-        <button class="btn"><i class="fa-solid fa-window-minimize"></i></button>
-        <button class="btn"><i class="fa-solid fa-xmark"></i></button>
+        <button class="stauts-bar_btn"><i class="fa-solid fa-gear"></i></button>
+        <button class="stauts-bar_btn">
+          <i class="fa-solid fa-window-minimize"></i>
+        </button>
+        <button class="stauts-bar_btn">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
       </div>
     </div>
     <div class="logo">
