--- a/chatList.html
+++ b/chatList.html
@@ -1,21 +1,104 @@
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/component/chats.css" />
+    <link rel="stylesheet" href="css/component/status-bar.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat Lists Clone by JSON</title>
   </head>
   <body>
-    <div class="status-bar">
-      <div class="status-bar_column">
-        <button class="btn"><i class="fa-solid fa-window-minimize"></i></button>
+    <div class="sideBar">
+      <div class="menuTop">
+        <div>
+          <a class="sideBar_btn" href="friendList.html">
+            <i class="fa-solid fa-user-large fa-2x"></i>
+          </a>
+        </div>
+        <div>
+          <a class="sideBar_btn" id="sideBar_btn_now" href="chatList.html">
+            <i class="fa-solid fa-comment fa-2x"></i>
+          </a>
+        </div>
+        <div>
+          <a class="sideBar_btn" href="more.html">
+            <i class="fa-solid fa-ellipsis fa-2x"></i>
+          </a>
+        </div>
       </div>
-      <div class="status-bar_column">
-        <button class="btn"><i class="fa-regular fa-square"></i></button>
+      <div class="menuBot">
+        <div><i class="fa-solid fa-face-smile"></i></div>
+        <div><i class="fa-solid fa-bell"></i></div>
+        <div><i class="fa-solid fa-gear"></i></div>
       </div>
-      <div class="status-bar_column">
-        <button class="btn"><i class="fa-solid fa-xmark"></i></button>
+    </div>
+
+    <div class="friends">
+      <div class="status-bar">
+        <div class="status-bar_column">
+          <button class="stauts-bar_btn">
+            <i class="fa-solid fa-window-minimize"></i>
+          </button>
+        </div>
+        <div class="status-bar_column">
+          <button class="stauts-bar_btn">
+            <i class="fa-regular fa-square"></i>
+          </button>
+        </div>
+        <div class="status-bar_column">
+          <button class="stauts-bar_btn">
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+        </div>
+      </div>
+      <div class="friends_header">
+        <h2 class="friends_header_item">채팅</h2>
+        <div class="friends_header_item">
+          <button class="friends_header_btn">
+            <i class="fa-solid fa-magnifying-glass fa-xl"></i>
+          </button>
+          <button class="friends_header_btn">
+            <i class="fa-regular fa-comments fa-xl"></i>
+          </button>
+          <button class="friends_header_btn">
+            <i class="fa-regular fa-comment fa-xl"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="friends_list_section">
+        <div class="friendsProfile">
+          <div>
+            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+          </div>
+          <div class="friendsName">
+            <h5>서무돌</h5>
+          </div>
+        </div>
+        <div class="friendsProfile">
+          <div>
+            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+          </div>
+          <div class="friendsName">
+            <h5>허남준</h5>
+          </div>
+        </div>
+        <div class="friendsProfile">
+          <div>
+            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+          </div>
+          <div class="friendsName">
+            <h5>원정용</h5>
+          </div>
+        </div>
+        <div class="friendsProfile">
+          <div>
+            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+          </div>
+          <div class="friendsName">
+            <h5>정광철</h5>
+          </div>
+        </div>
       </div>
     </div>
   </body>
