--- a/chatList.html
+++ b/chatList.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="friends">
+    <div class="main">
       <div class="status-bar">
         <div class="status-bar_column">
           <button class="stauts-bar_btn">
@@ -51,22 +51,22 @@
           </button>
         </div>
       </div>
-      <div class="friends_header">
-        <h2 class="friends_header_item">채팅</h2>
-        <div class="friends_header_item">
-          <button class="friends_header_btn">
+      <div class="main_header">
+        <h2 class="main_header_item">채팅</h2>
+        <div class="main_header_item">
+          <button class="main_header_btn">
             <i class="fa-solid fa-magnifying-glass fa-xl"></i>
           </button>
-          <button class="friends_header_btn">
+          <button class="main_header_btn">
             <i class="fa-regular fa-comments fa-xl"></i>
           </button>
-          <button class="friends_header_btn">
+          <button class="main_header_btn">
             <i class="fa-regular fa-comment fa-xl"></i>
           </button>
         </div>
       </div>
 
-      <div class="friends_list_section">
+      <div class="chat_list_section">
         <div class="friendsProfile">
           <div>
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
