--- a/friendList.html
+++ b/friendList.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="friends">
+    <div class="main">
       <div class="status-bar">
         <div class="status-bar_column">
           <button class="stauts-bar_btn">
@@ -52,13 +52,13 @@
           </button>
         </div>
       </div>
-      <div class="friends_header">
-        <h2 class="friends_header_item">친구</h2>
-        <div class="friends_header_item">
-          <button class="friends_header_btn">
+      <div class="main_header">
+        <h2 class="main_header_item">친구</h2>
+        <div class="main_header_item">
+          <button class="main_header_btn">
             <i class="fa-solid fa-magnifying-glass fa-xl"></i>
           </button>
-          <button class="friends_header_btn">
+          <button class="main_header_btn">
             <i class="fa-solid fa-user-plus fa-xl"></i>
           </button>
         </div>
@@ -75,7 +75,6 @@
 
       <div class="friends_list_section">
         <div class="section_label">내 멀티프로필</div>
-        <i class="fas fa-chevron-up fa-xs" aria-hidden="true"></i>
         <div class="friendsProfile">
           <div>
             <img class="friendsImg" src="img/multiImg.jpg" alt="" />
