--- a/chatList.html
+++ b/chatList.html
@@ -58,47 +58,59 @@
             <i class="fa-solid fa-magnifying-glass fa-xl"></i>
           </button>
           <button class="main_header_btn">
-            <i class="fa-regular fa-comments fa-xl"></i>
+            <i class="fa-solid fa-comments fa-xl"></i>
           </button>
           <button class="main_header_btn">
-            <i class="fa-regular fa-comment fa-xl"></i>
+            <i class="fa-solid fa-comment fa-xl"></i>
           </button>
         </div>
       </div>
 
       <div class="chat_list_section">
-        <div class="friendsProfile">
-          <div>
-            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+        <a href="chatNew.html">
+          <div class="chatBox">
+            <div>
+              <img class="friendsImg" src="img/userImg.jpg" alt="" />
+            </div>
+            <div>
+              <h5 class="friendsName">서무돌</h5>
+              <h6 class="previewMsg">휴가는 내일 하루 쓰면되겠다</h6>
+            </div>
           </div>
-          <div class="friendsName">
-            <h5>서무돌</h5>
+        </a>
+        <a href="chatNew.html">
+          <div class="chatBox">
+            <div>
+              <img class="friendsImg" src="img/userImg.jpg" alt="" />
+            </div>
+            <div>
+              <h5 class="friendsName">허남준</h5>
+              <h6 class="previewMsg">나가라ㅡㅡ</h6>
+            </div>
           </div>
-        </div>
-        <div class="friendsProfile">
-          <div>
-            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+        </a>
+        <a href="chatNew.html">
+          <div class="chatBox">
+            <div>
+              <img class="friendsImg" src="img/userImg.jpg" alt="" />
+            </div>
+            <div>
+              <h5 class="friendsName">원정용</h5>
+              <h6 class="previewMsg">재택?</h6>
+            </div>
           </div>
-          <div class="friendsName">
-            <h5>허남준</h5>
+        </a>
+        <a href="chatNew.html">
+          <div class="chatBox">
+            <div>
+              <img class="friendsImg" src="img/userImg.jpg" alt="" />
+            </div>
+            <div>
+              <h5 class="friendsName">정광철</h5>
+              <h6 class="previewMsg">오호?</h6>
+            </div>
           </div>
-        </div>
-        <div class="friendsProfile">
-          <div>
-            <img class="friendsImg" src="img/userImg.jpg" alt="" />
-          </div>
-          <div class="friendsName">
-            <h5>원정용</h5>
-          </div>
-        </div>
-        <div class="friendsProfile">
-          <div>
-            <img class="friendsImg" src="img/userImg.jpg" alt="" />
-          </div>
-          <div class="friendsName">
-            <h5>정광철</h5>
-          </div>
-        </div>
+        </a>
       </div>
     </div>
   </body>
