changes in laptop 220613

--- a/chatList.html
+++ b/chatList.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="css/component/chats.css" />
-    <link rel="stylesheet" href="css/component/status-bar.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,19 +34,19 @@
     </div>
 
     <div class="main">
-      <div class="status-bar">
-        <div class="status-bar_column">
-          <button class="stauts-bar_btn">
-            <i class="fa-solid fa-window-minimize"></i>
+      <div class="standard-bar">
+        <div class="standard-bar_button">
+          <button class="standard-bar_button_item button">
+            <i class="fa-regular fa-window-minimize"></i>
           </button>
         </div>
-        <div class="status-bar_column">
-          <button class="stauts-bar_btn">
+        <div class="standard-bar_button">
+          <button class="standard-bar_button_item button">
             <i class="fa-regular fa-square"></i>
           </button>
         </div>
-        <div class="status-bar_column">
-          <button class="stauts-bar_btn">
+        <div class="standard-bar_button">
+          <button class="standard-bar_button_item button">
             <i class="fa-solid fa-xmark"></i>
           </button>
         </div>
