--- a/friendList.html
+++ b/friendList.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="css/component/friends.css" />
-    <link rel="stylesheet" href="css/component/status-bar.css" />
+    <link rel="stylesheet" href="css/styles.css" />son
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,25 +29,24 @@
       <div class="menuBot">
         <div><i class="fa-solid fa-face-smile"></i></div>
         <div><i class="fa-solid fa-bell"></i></div>
-
         <div><i class="fa-solid fa-gear"></i></div>
       </div>
     </div>
 
     <div class="main">
-      <div class="status-bar">
-        <div class="status-bar_column">
-          <button class="stauts-bar_btn">
-            <i class="fa-solid fa-window-minimize"></i>
+      <div class="standard-bar">
+        <div class="standard-bar_button">
+          <button class="standard-bar_button_item button">
+            <i class="fa-regular fa-window-minimize"></i>
           </button>
         </div>
-        <div class="status-bar_column">
-          <button class="stauts-bar_btn">
+        <div class="standard-bar_button">
+          <button class="standard-bar_button_item button">
             <i class="fa-regular fa-square"></i>
           </button>
         </div>
-        <div class="status-bar_column">
-          <button class="stauts-bar_btn">
+        <div class="standard-bar_button">
+          <button class="standard-bar_button_item button">
             <i class="fa-solid fa-xmark"></i>
           </button>
         </div>
@@ -86,74 +85,74 @@
       </div>
       <div class="friends_list_section">
         <div class="section_label">생일인 친구</div>
-        <div class="friendsProfile">
+        <a class="friendsProfile" href="chatNew.html">
           <div>
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
             <h5>이모</h5>
           </div>
-        </div>
+        </a>
       </div>
       <div class="friends_list_section">
         <div class="section_label">업데이트한 친구</div>
-        <div class="friendsProfile">
+        <a class="friendsProfile" href="chatNew.html">
           <div>
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
             <h5>이승환</h5>
           </div>
-        </div>
+        </a>
       </div>
       <div class="friends_list_section">
         <div class="section_label">즐겨찾기</div>
-        <div class="friendsProfile">
+        <a class="friendsProfile" href="chatNew.html">
           <div>
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
             <h5>지수</h5>
           </div>
-        </div>
+        </a>
       </div>
       <div class="friends_list_section">
         <div class="section_label">채널</div>
       </div>
       <div class="friends_list_section">
         <div class="section_label">친구</div>
-        <div class="friendsProfile">
+        <a class="friendsProfile" href="chatNew.html">
           <div>
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
             <h5>서무돌</h5>
           </div>
-        </div>
-        <div class="friendsProfile">
+        </a>
+        <a class="friendsProfile" href="chatNew.html">
           <div>
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
             <h5>허남준</h5>
           </div>
-        </div>
-        <div class="friendsProfile">
+        </a>
+        <a class="friendsProfile" href="chatNew.html">
           <div>
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
             <h5>원정용</h5>
           </div>
-        </div>
-        <div class="friendsProfile">
+        </a>
+        <a class="friendsProfile" href="chatNew.html">
           <div>
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
             <h5>정광철</h5>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </body>
