chatting screen create 220614

--- a/chatList.html
+++ b/chatList.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/component/chats.css" />
+    <link rel="stylesheet" href="css/screens/chatList.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -36,17 +36,17 @@
     <div class="main">
       <div class="standard-bar">
         <div class="standard-bar_button">
-          <button class="standard-bar_button_item button">
+          <button class="standard-bar_button_item button buttonClick">
             <i class="fa-regular fa-window-minimize"></i>
           </button>
         </div>
         <div class="standard-bar_button">
-          <button class="standard-bar_button_item button">
+          <button class="standard-bar_button_item button buttonClick">
             <i class="fa-regular fa-square"></i>
           </button>
         </div>
         <div class="standard-bar_button">
-          <button class="standard-bar_button_item button">
+          <button class="standard-bar_button_item button buttonClick">
             <i class="fa-solid fa-xmark"></i>
           </button>
         </div>
@@ -54,61 +54,52 @@
       <div class="main_header">
         <h2 class="main_header_item">채팅</h2>
         <div class="main_header_item">
-          <button class="main_header_btn">
+          <button class="main_header_btn buttonClick">
             <i class="fa-solid fa-magnifying-glass fa-xl"></i>
           </button>
-          <button class="main_header_btn">
+          <button class="main_header_btn buttonClick">
             <i class="fa-solid fa-comments fa-xl"></i>
           </button>
-          <button class="main_header_btn">
+          <button class="main_header_btn buttonClick">
             <i class="fa-solid fa-comment fa-xl"></i>
           </button>
         </div>
       </div>
-
-      <div class="chat_list_section">
-        <a href="chatNew.html">
-          <div class="chatBox">
-            <div>
-              <img class="friendsImg" src="img/userImg.jpg" alt="" />
-            </div>
-            <div>
-              <h5 class="friendsName">서무돌</h5>
-              <h6 class="previewMsg">휴가는 내일 하루 쓰면되겠다</h6>
-            </div>
+      <div class="list_section">
+        <a class="friendBox" href="chatNew.html">
+          <div>
+            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+          </div>
+          <div>
+            <h5 class="friendsName">서무돌</h5>
+            <h6 class="previewMsg">휴가는 내일 하루 쓰면되겠다</h6>
           </div>
         </a>
-        <a href="chatNew.html">
-          <div class="chatBox">
-            <div>
-              <img class="friendsImg" src="img/userImg.jpg" alt="" />
-            </div>
-            <div>
-              <h5 class="friendsName">허남준</h5>
-              <h6 class="previewMsg">나가라ㅡㅡ</h6>
-            </div>
+        <a class="friendBox" href="chatNew.html">
+          <div>
+            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+          </div>
+          <div>
+            <h5 class="friendsName">허남준</h5>
+            <h6 class="previewMsg">나가라ㅡㅡ</h6>
           </div>
         </a>
-        <a href="chatNew.html">
-          <div class="chatBox">
-            <div>
-              <img class="friendsImg" src="img/userImg.jpg" alt="" />
-            </div>
-            <div>
-              <h5 class="friendsName">원정용</h5>
-              <h6 class="previewMsg">재택?</h6>
-            </div>
+        <a class="friendBox" href="chatNew.html">
+          <div>
+            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+          </div>
+          <div>
+            <h5 class="friendsName">원정용</h5>
+            <h6 class="previewMsg">재택?</h6>
           </div>
         </a>
-        <a href="chatNew.html">
-          <div class="chatBox">
-            <div>
-              <img class="friendsImg" src="img/userImg.jpg" alt="" />
-            </div>
-            <div>
-              <h5 class="friendsName">정광철</h5>
-              <h6 class="previewMsg">오호?</h6>
-            </div>
+        <a class="friendBox" href="chatNew.html">
+          <div>
+            <img class="friendsImg" src="img/userImg.jpg" alt="" />
+          </div>
+          <div>
+            <h5 class="friendsName">정광철</h5>
+            <h6 class="previewMsg">오호?</h6>
           </div>
         </a>
       </div>
