--- a/chatNew.html
+++ b/chatNew.html
@@ -1,17 +1,52 @@
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/component/status-bar.css" />
+    <link rel="stylesheet" href="css/screens/chat.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Chat Clone by Json</title>
   </head>
   <body>
-    <div>
-        <div>user Img</div>
-        <div>name</div>
-    <div>chat</div>
-    <div>input</div>
+    <header class="chatScreenHeader">
+      <div>user Img</div>
+      <div>name</div>
+    </header>
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Tuesday, June 30, 2020</div>
+
+      <div class="message-row">
+        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+        <div class="message-row__content">
+          <span class="message__author">Nicolas</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">Hi nice to meet you!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
+    </main>
+    <form class="reply">
+      <div class="reply_column">
+        <!-- <i class="far fa-plus-square fa-lg"></i> -->
+        <input type="text" placeholder="Write a message..." />
+      </div>
+      <div class="reply_column">
+        <!-- <i class="far fa-smile-wink fa-lg"></i> -->
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
+    </form>
   </body>
   <script
     src="https://kit.fontawesome.com/787074e497.js"
